--- a/inkpress/companystyle.css
+++ b/inkpress/companystyle.css
@@ -158,9 +158,6 @@ ul {
 	
 #topbar.open {
 	height:130px; }
-
-.drop-click {
-	height:130px; }
 	
 #topbar a {
 	font-size:1em;
@@ -425,9 +422,6 @@ span {
 		clear:both;
 		width:95%; }
 	
-	nav .menulink {
-		clear:both; 
-		display:block; }
 		
 	.about-info { 
 		clear:both; 
@@ -446,25 +440,29 @@ span {
 		left:10%; }
 		
 	#topbar button {
-		border:1px solid black; 
-		font-size:1em;
-		color:black;
-		background-color:white;
-		font-weight:300; 
-		border-radius:10px; 
-		padding:10px;
-		padding-top:4px;
-		padding-bottom:7px;
-		margin:0; 
-		width:80px;
-		height:40px;
-		float:right;
-		position:relative;
 		right:10%;
 		top:10px; }
 	
 	#group2 img {
-		max-height:30px;
-		padding-right:40px; 
-		padding-bottom:50px; }
+		max-height:25px;
+		padding-right:35px; 
+		padding-bottom:45px; }
+		
+	#tophiddenbar a {
+	font-size:.7em;
+	clear:both;
+	margin-left:33%;
+	margin-right:33%;
+	text-align:center;
+	width:30%;
+	padding-top:15px;
+	padding-bottom:10px; }
+
+	#tophiddenbar a:hover {
+		color:#B9D32A;
+		font-weight:bold; }
+	
+	#topbar.open {
+		height:265px; }
+	
 	}
