--- a/inkpress/style.css
+++ b/inkpress/style.css
@@ -92,7 +92,7 @@ p {
 p { font-size:1.5em; }
 
 .languages img {
-	max-width:40%;
+	max-width:30%;
 	padding-left:10%;
 	margin-left:auto;
 	margin-right:auto; }
@@ -105,7 +105,8 @@ p { font-size:1.5em; }
 	float:left; }
 
 p { font-size:1.5em; 
-	float:right; }
+	float:right; 
+	padding-right:5%; }
 
 .languages {
 	width:40%; }
@@ -113,6 +114,7 @@ p { font-size:1.5em;
 .languages img {
 	max-width:40%;
 	padding-left:10%;
+	float:left;
 	margin-left:auto;
 	margin-right:auto; }
 }
